# rak3112-rs485-node

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  HARDWARE_REV.md  README.md  compiled_readers.json  requirements-dev.txt  requirements.txt
.claude/skills/_shared/: README.md  cs_grpcweb.py
.claude/skills/install-chirpstack-decoder/: SKILL.md
.claude/skills/lorawan-deprovision/: SKILL.md  deprovision.py
.claude/skills/lorawan-provision-device/: SKILL.md  provision.py
.claude/skills/lorawan-verify-join/: SKILL.md  verify.py
.claude/skills/mcp-gateway-health/: SKILL.md
.claude/skills/provision-node/: SKILL.md
.claude/skills/provision-node-prod/: SKILL.md
.claude/skills/rak-lorawan-knowledge/: SKILL.md
.github/workflows/: ci.yml
.planning/knowledge/devops/: demo-provision-simulated-mfm384.md
.planning/knowledge/gotchas/: chirpstack-cluster-token-not-an-api-key.md  docker-idf-build-flash-and-sim-join-gate.md
.planning/knowledge/sessions/: 2026-06-29-demo-provision-sim-mfm384.md
api/: auth.py  config.py  main.py  models.py  models_v2.py  products.py
api/routers/: builds.py  flash.py  products.py  profiles.py  sensors.py
api/services/: profiles.py  storage.py
deploy/: cluster.yaml
device-profiles/: README.md  chirpstack_fleet_decoder.js  deepsea-dse.json  honeywell-eem400-scanned.json  honeywell-eem400.json  profile_to_blob.py  profiles_to_catalog.py  rs-fsjt-n01.json  rsfsjt-n01.json  selec-mfm384.json  validate_profiles.py
device-profiles/profiles/: deepsea-dse.json  honeywell-eem400-scanned.json  honeywell-eem400.json  rsfsjt-n01.json  selec-mfm384.json
device-profiles/reference/: README.md
device-profiles/reference/arduino-code/: Deep-Sea-code.ino  MFM384_with_esp.ino  (+1 more)
device-profiles/schema/: profile.schema.json
docs/: CRM_FIRMWARE_AGENT_GUIDE.md  CRM_PROVISIONING_WORKFLOW.md  DEFERRED_REGISTER.md  DEPLOY_KICKOFF.md  FAHIM_HANDOFF.md  LORAWAN_PROVISIONING.md  MCP_GATEWAY.md  NOTE_FOR_FAHIM_2026-07-12.md  PIN_MAP.md  PLATFORM_OVERVIEW.md  PROVISIONING_API_CONTRACT.md  RUNBOOK.md  SESSION_HANDOFF.md
docs/adr/: ADR-002-rs485-bus.md  ADR-003-lorawan-stack.md  ADR-004-as923-subband.md  ADR-005-payload-schema.md  ADR-006-profile-driven-runtime.md
docs/prompts/: add-sensor-from-datasheet.md
firmware/: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.dump-stepper  sdkconfig.defaults.field-rsfsjt  sdkconfig.defaults.jog-stepper  sdkconfig.defaults.led-heartbeat  sdkconfig.defaults.lightsleep-led  sdkconfig.defaults.mfm384  sdkconfig.defaults.mfm384-volt  sdkconfig.defaults.ota-bad  sdkconfig.defaults.poll  sdkconfig.defaults.poll-rsfsjt  sdkconfig.defaults.poll-stepper  sdkconfig.defaults.scan  sdkconfig.defaults.scan-stepper  sdkconfig.defaults.scanner  sdkconfig.defaults.sim-mfm384  sdkconfig.defaults.sim-profile  sdkconfig.defaults.sim-rsfsjt  sdkconfig.defaults.slave-sim  sdkconfig.defaults.wdt-test
firmware/components/modbus/: CMakeLists.txt  modbus_master.c  modbus_rtu.c
firmware/components/modbus/include/: modbus_master.h  modbus_rtu.h
firmware/esp-idf-patches/: 0001-fix-iad-desc-size.patch
firmware/main/: CMakeLists.txt  EspHalS3.h  Kconfig.projbuild  app_main.c  idf_component.yml  lora.cpp  lora.h  modbus_slave_sim.c  modbus_slave_sim.h  ota.c  ota.h  prov_console.cpp  provisioning.c  provisioning.h  scan_console.c  scan_console.h  status_led.c  status_led.h
firmware/main/include/: gpio_remap.h
firmware/scripts/: apply-patches.sh
hardware/: README.md
hardware/schematic/: README.md
k8s/: deployment.yaml  namespace.yaml  secret.example.yaml  service.yaml
pi-scanner/: README.md  pyproject.toml  requirements.txt
pi-scanner/app/: __init__.py  config.py  events.py  inference.py  main.py  mock_backend.py  models.py  node_console.py  onboarding.py  orchestrator.py  profile_emitter.py  sweep_engine.py
pi-scanner/deploy/: README.md  careflow-kiosk.desktop  careflow-kiosk.service  careflow-scanner.service  kiosk.sh  labwc-rc.xml  wf-panel-pi.ini
pi-scanner/tests/: mock_node.py  test_api.py  test_emitter.py  test_inference.py  test_onboarding.py  test_orchestrator.py  test_sweep.py
pi-scanner/web/: app.js  index.html  styles.css
presentation/: README.md  config.js.example  index.html
scripts/: flash.sh
tests/: conftest.py
tests/host/: CMakeLists.txt  test_device_profile.c  test_modbus_rtu.c  test_payload.c  test_ring_buffer.c
tests/integration/: conftest.py  test_builds.py
tests/unit/: test_auth.py  test_builds.py  test_products_senseflow.py  test_sensors.py
tools/: chirpstack_mfm384_decoder.js  ina238_current.py  install_decoder.py  provision_node.py  provision_nvs.py  provision_template.json  provision_template_senseflow.json  provtemplate.py
tools/webserial-spike/: index.html  spike.mjs
(+28 files in other folders)
